# monitorctl

./: .gitignore  README.md  pyproject.toml
monitorctl/: __about__.py  __init__.py  __main__.py  app.py  bspc.py  cli.py  profile.py  xrandr.py
