[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "monitorctl"
description = 'Monitor control tool for bspwm and multiple monitors and profiles'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "danilo queiroz", email = "dpenna.queiroz@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "click",
  "pyyaml",
]
dynamic = ["version"]

[project.scripts]
monitorctl = "monitorctl:main"

[project.urls]
Documentation = "https://github.com/daniloqueiroz/monitorctl#README.md"
Issues = "https://github.com/unknown/daniloqueiroz/issues"
Source = "https://github.com/daniloqueiroz/monitorctl"

[tool.hatch.version]
path = "monitorctl/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]

[tool.hatch.build.targets.sdist]
exclude = [
  "/.idea",
]

[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=monitorctl --cov=tests {args}"
no-cov = "cov --no-cov {args}"
monitorctl = "python -m monitorctl {args}"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "monitorctl/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
